--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,3 +2,12 @@
     width: 120.26px;
     height: 56px;
 }
+
+#search-box {
+    width: 370px;
+    height: 44px;
+    background: rgba(255, 255, 255, 0.2);
+    /* border: 1px solid #FFFFFF; */
+    box-sizing: border-box;
+    border-radius: 5px;
+}
