--- a/src/components/pages/Booking/Booking.css
+++ b/src/components/pages/Booking/Booking.css
@@ -1,26 +1,43 @@
 #book-form {
-    /* position: absolute; */
-    width: 470px;
-    height: 427px;
-    left: 835px;
-    /* top: 217px; */
-    margin-top: 200px;
-    background: #FFFFFF;
-    border-radius: 5px;
+  /* position: absolute; */
+  width: 470px;
+  height: 427px;
+  left: 835px;
+  /* top: 217px; */
+  margin-top: 200px;
+  background: #ffffff;
+  border-radius: 5px;
 }
 
 #book-title {
-    position: absolute;
-    width: 378.53px;
-    height: 116px;
-    left: 135px;
-    top: 236px;
+  position: absolute;
+  width: 378.53px;
+  height: 116px;
+  left: 135px;
+  top: 136px;
 
-    font-family: Bebas Neue;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 50px;
-    line-height: 117px;
+  font-family: Bebas Neue;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 50px;
+  line-height: 117px;
 
-    /* color: #FFFFFF; */
+  /* color: #FFFFFF; */
+}
+
+#book-text {
+  position: absolute;
+  width: 405px;
+  height: 193px;
+  left: 135px;
+  top: 250px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  /* or 150% */
+
+  /* color: #ffffff; */
 }
