--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -1,40 +1,45 @@
 .carousel-caption {
-    position: absolute;
-    top: 100px;
-    color: #FFFFFF;
+  position: absolute;
+  top: 100px;
+  color: #ffffff;
 }
 
 .carousel-caption h3 {
-    width: 378.53px;
-    font-family: Bebas Neue;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 40px;
+  width: 378.53px;
+  font-family: Bebas Neue;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
 }
 
 .carousel-caption p {
-    width: 400px;
-    height: 80px;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: justify;
+  width: 400px;
+  height: 80px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: justify;
 }
 
-button {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 12px 0px 0px 29px;
+#booking-btn {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 
-    position: relative;
-    width: 161px;
-    height: 48px;
-    /* left: 135px; */
-    top: 10px;
+  position: relative;
+  width: 161px;
+  height: 48px;
+  /* left: 135px; */
+  top: 10px;
 
-    background: #F9A51A;
-    border-radius: 5px;
+  background: #f9a51a;
+  border-radius: 5px;
+  justify-content: center;
+  align-items: center;
+}
+
+#arrow {
+  padding-left: 10px;
 }
