--- a/src/components/pages/Auth/Login/Login.css
+++ b/src/components/pages/Auth/Login/Login.css
@@ -40,3 +40,21 @@
     display: block;
     margin: 0 auto;
 }
+
+#forget-password {
+    position: relative;
+    height: 20px;
+    left: 57.64%;
+    right: 32.85%;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    text-decoration-line: underline;
+    color: #F9A51A;
+}
+
+#forget-password:hover {
+    cursor: pointer;
+}
