--- a/src/components/pages/Auth/Login/Login.css
+++ b/src/components/pages/Auth/Login/Login.css
@@ -12,12 +12,28 @@
     padding: 10px;
 }
 
+#login-form h3 {
+    /* position: absolute; */
+    height: 29px;
+    left: 34.24%;
+    right: 60.83%;
+    top: 208.03px;
+    padding: 30px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 29px;
+    color: #000000;
+}
+
 #or {
     width: 100%;
     text-align: center;
     border-bottom: 1px solid #000;
     line-height: 0.1em;
     margin: 10px 0 20px;
+    padding-top: 150px;
 }
 
 #or span {
@@ -25,9 +41,30 @@
     padding: 0 10px;
 }
 
+.continue-btn {
+    /* position: absolute; */
+    width: 461px;
+    height: 51px;
+    left: 492px;
+    top: 696px;
+    background: #FFFFFF;
+    border: 1px solid #C7C7C7;
+    box-sizing: border-box;
+    border-radius: 57px;
+    margin-top: 20px;
+
+    text-align: center;
+    line-height: 45px;
+}
+
+
 .company-icon {
     width: 37px;
     height: 37px;
+    float: left;
+    margin: 5px;
+
+
 }
 
 #form-login-btn {
@@ -35,7 +72,6 @@
     width: 461px;
     height: 50px;
     left: 493px;
-    top: 502px;
     background: #F9A51A;
     display: block;
     margin: 0 auto;
