--- a/src/components/common/Location/Location.css
+++ b/src/components/common/Location/Location.css
@@ -1,5 +1,21 @@
 .card-img-top {
     width: 100%;
-    height: 15vw;
-    object-fit: cover;
+    /* height: 15vw; */
+    /* height: 100%; */
+    /* object-fit: cover; */
+
+}
+
+.card {
+    margin: 10px;
+    /* height: 300px; */
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.bottom-center {
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
 }
