--- a/src/components/common/Location/Location.css
+++ b/src/components/common/Location/Location.css
@@ -1,21 +1,34 @@
-.card-img-top {
-    width: 100%;
-    /* height: 15vw; */
-    /* height: 100%; */
-    /* object-fit: cover; */
-
+.card {
+  margin: 10px;
 }
 
-.card {
-    margin: 10px;
-    /* height: 300px; */
-    position: relative;
-    text-align: center;
-    color: white;
+.card-img-top {
+  width: 100%;
+  /* height: 15vw; */
+  /* height: 100%; */
+  object-fit: cover;
+}
+
+.card img {
+  /* margin: 10px; */
+  height: 300px;
+  position: relative;
+  text-align: center;
+  /* color: white; */
 }
 
 .bottom-center {
-    position: absolute;
-    bottom: 8px;
-    right: 16px;
+  position: absolute;
+  left: 20px;
+  transform: translateY(-20%);
+  color: white;
+
+  width: 146px;
+  height: 43px;
+  font-family: Bebas Neue;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 43px;
+  color: #FFFFFF;
 }
