--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -2,14 +2,17 @@
     position: absolute;
     top: 100px;
     color: #ffffff;
+
 }
 
 .carousel-caption h3 {
-    width: 378.53px;
+    width: 300.0px;
     font-family: Bebas Neue;
     font-style: normal;
-    font-weight: normal;
-    font-size: 30px;
+    font-weight: bold;
+    font-size: 35px;
+    background-color: rgba(255, 255, 255, 0.1);
+
 }
 
 .carousel-caption p {
@@ -21,6 +24,7 @@
     font-size: 16px;
     line-height: 24px;
     text-align: justify;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 #booking-btn {
